[project]
name = "django-workspace"
version = "0.1.0"
description = "Django workspace for learning and development"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.5",
]

[tool.hatch.build.targets.wheel]
packages = ["django_workspace"]

[project.optional-dependencies]
dev = [
    "django-debug-toolbar",
    "ruff",
    "pre-commit", 
    "pytest-django",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "django-debug-toolbar>=4.4.6",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "pytest-django>=4.9.0",
]

[tool.ruff]
target-version = "py311" 
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by ruff format
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["config"]
