[tool.poetry]
name = "cpython3-9"
version = "0.1.0"
description = ""
authors = ["widehyo@gmail.com <widehyo@gmail.com>"]
readme = "README.md"
packages = [{include = "cpython3"}]

[tool.poetry.dependencies]
python = "^3.9"
instaviz = "^0.6.0"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
